--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,8 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "/images/bookmark.svg"
+        "/images/bookmark.svg",
+        "/images/bookmark-auto.svg"
       ],
       "matches": [
         "<all_urls>"
